fix(progress-stepper): changed url to be inline SVG and fixed dark mode

--- a/src/less/dark-mode/base/dark-mode.less
+++ b/src/less/dark-mode/base/dark-mode.less
@@ -35,6 +35,8 @@
         --color-checkbox-mixed-foreground: @color-black;
         --url-image-progress-spinner: @url-image-progress-spinner-dark-mode;
         --url-image-progress-spinner-large: @url-image-progress-spinner-large-dark-mode;
+        --image-progress-spinner-dark-mode: @image-progress-spinner-dark-mode;
+        --image-progress-spinner-large-dark-mode: @image-progress-spinner-large-dark-mode;
         // these need refactoring to use existing or new product aliases
         --color-white: @color-white-dark-mode;
         --color-b4: @color-b4-dark-mode;
